# aquascope_svg

./: .gitignore  AGENTS.md  Cargo.toml  FORMAT.md  Justfile  README.md  examples.md
docs/: FORMAT.md  manual.md
kaya_lib/: Cargo.toml
kaya_lib/src/: arrow.rs  canvas.rs  draw.rs  draw_state.rs  grammar.pest  index.hbs  lib.rs  parser.rs  render.rs  states.rs  style.css  style.rs
kaya_png/: Cargo.toml
kaya_png/src/: arrow.rs  canvas.rs  draw.rs  draw_state.rs  main.rs  render.rs  style.rs
kaya_tools/: Cargo.toml
kaya_tools/scripts/: generate_gold.sh  generate_json.sh
kaya_tools/src/: render_kaya.rs  states.rs  style.css
kaya_tools/tests/: integration.rs
kaya_ts/: Cargo.toml  package-lock.json  package.json  test.html
kaya_ts/src/: lib.rs
kaya_ts/ts/: build.ts  kaya.ts
kaya_web/: Cargo.toml  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
kaya_web/ansible/: deploy.yml  letsencrypt.yml  setup.yml  site.conf.j2
kaya_web/public/: CNAME
kaya_web/src/: App.vue  components.d.ts  kaya.ts  lib.rs  main.ts
kaya_web/src/components/: About.vue  Diagram.vue  Editor.vue  HelloWorld.vue  Kaya.vue  Logos.vue  Manual.vue  MdEditor.vue
kaya_web/src/components/layouts/: BaseHeader.vue  BaseSide.vue
kaya_web/src/pages/: index.vue
kaya_web/src/styles/: github-dark.css  github-markdown.css  index.scss
kaya_web/src/styles/element/: dark.scss  index.scss
parse/: README.md  grammar.lark  main.py  pyproject.toml  test_grammar.lark
scripts/: generate_gold.sh  generate_json.sh
src/: grammar.pest  index.hbs  json_to_kaya.rs  json_to_states.rs  main.rs  mtrace.rs  mtrace.ts  parse_states.rs  parser.rs  render.rs  render_kaya.rs  render_states.rs  states.rs  states_grammar.pest  style.css  svg.hbs  svg_draw.rs
testdata/: box.golden  error.golden  examples.md  nested_ref.golden  svg_canvg_test.html  test.states  tuple.golden
testdata/bare/: array_0_error.states  basic.states  box.states  error.states  if_1.states  if_4.states  nested_ref.states  tuple.states  vec_0_error.states
testdata/gold/: apply_curve_error.gold  array_0_error.gold  basic.gold  basic.states  box.gold  box.states  closure.bare.gold  closure.gold  closure.states  error.gold  error.states  for_loop_0.bare.gold  for_loop_0.gold  for_loop_0.states  if_0.gold  if_0.states  if_1.gold  if_1.states  if_4.gold  if_4.states  interior_move.bare.gold  interior_move.gold  interior_move.states  linear_0.bare.gold  linear_0.gold  linear_0.states  nested-ref.gold  nested_ref.gold  nested_ref.states  stackref.bare.gold  stackref.gold  stackref.states  tuple.gold  tuple.states  vec_0_error.gold  vec_0_error.states
testdata/html/: array_0_error.html  basic.html  box.html  closure.html  error.html  for_loop_0.html  if_0.html  if_4.html  interior_move.html  linear_0.html  nested_ref.html  stackref.html  tuple.html  vec_0_error.html
testdata/json/: apply_curve_error.json  array_0_error.json  basic.json  box.json  closure.json  error.json  for_loop_0.json  if_0.json  if_1.json  if_4.json  interior_move.json  linear_0.json  nested-ref.json  stackref.json  tuple.json  vec_0_error.json
testdata/kaya/: demo.kaya  demo2.kaya  demo3.kaya  parse_error.kaya
testdata/rust/: array_0_error.test  if_4.test  interior_move.test  vec_0_error.test
tests/: integration.rs
