[package]
name = "aquascope_svg"
version = "0.1.0"
edition = "2024"
default-run = "render_states"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6.4.0"
pest = "2"
pest_derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "aquascope_json_to_states"
path = "src/json_to_states.rs"

[[bin]]
name = "render_states"
path = "src/render_states.rs"
