[package]
name = "kaya_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6.4.0"
pest = "2"
pest_derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2.0"
