[package]
name = "kaya_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
pest = "2"
pest_derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0"
rand = { version = "0.10.0", features = ["chacha"] }