[package]
name = "kaya_png"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
kaya_lib = { path = "../kaya_lib" }
tiny-skia = "0.12.0"

[dev-dependencies]
rand = { version = "0.10.0", features = ["chacha"] }

