[package]
name = "kaya_tools"
version = "0.1.0"
edition = "2024"
default-run = "render_kaya"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
kaya_lib = { path = "../kaya_lib" }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "aquascope_json_to_kaya"
path = "src/json_to_kaya.rs"

[[bin]]
name = "render_kaya"
path = "src/render_kaya.rs"
